--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ function change(hideId, showId){
 
 function accept() {
   // 🔗 GANTI DENGAN LINK KAMU! (Contoh: WhatsApp, Google Form, dll)
-  const yourMessageLink = "https://example.com"; // ← SESUAIKAN DI SINI
+  const yourMessageLink = "https://ngl.link/ikichann"; // ← SESUAIKAN DI SINI
 
   document.getElementById('screen3').innerHTML = `
     <h1>YEEEAAAAAA!!! 💖</h1>
@@ -212,4 +212,5 @@ function accept() {
 </script>
 
 </body>
+
 </html>
